WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276940
digits.t-mobile.com - Safari is not a recommended browser
https://bugs.webkit.org/show_bug.cgi?id=276940
Summary
digits.t-mobile.com - Safari is not a recommended browser
Karl Dubost
Reported
2024-07-23 02:43:13 PDT
This is happening for both Firefox and Safari. This was reported initially to
https://github.com/webcompat/web-bugs/issues/119767
Firefox
https://bugzilla.mozilla.org/show_bug.cgi?id=1898952
Safari this issue. The diagnosis is ```js t.supportBrowser = function () { if (c()) return !0; if (r && !r.mobile) { const e = r.brands; if (e.length > 0) for (const t of e) if (['Google Chrome', 'Microsoft Edge'].includes(t.brand)) return !0 } return !1 }, ``` which relies on the support for Client Hints. ``` const r = navigator.userAgentData; ``` Firefox created a site intervention Quirk to provide an object for the site.
https://github.com/mozilla-extensions/webcompat-addon/pull/362/files#diff-edfea982a0178b7a37361cb10b82f2fa16a793a3aaddabe651627aea35e8024d
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-07-23 02:44:36 PDT
<
rdar://problem/132309517
>
ccarley2
Comment 2
2025-08-19 15:20:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/49617
EWS
Comment 3
2025-08-19 22:35:28 PDT
Committed
298941@main
(a579d4b73ccf): <
https://commits.webkit.org/298941@main
> Reviewed commits have been landed. Closing PR #49617 and removing active labels.
EWS
Comment 4
2025-10-06 10:57:14 PDT
Committed
297297.514@safari-7622-branch
(dea318e93536): <
https://commits.webkit.org/297297.514@safari-7622-branch
> Reviewed commits have been landed. Closing PR #3752 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug