digits.t-mobile.com - Safari is not a recommended browser https://bugs.webkit.org/show_bug.cgi?id=276940 rdar://132309517

Reviewed by Brent Fulgham.

This enables the Navigator UserAgentData API only when the needsNavigatorUserAgentDataQuirk is enabled.
This quirk is enabled on digits.t-mobile.com is loaded.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebCore/page/Navigator.cpp:
(WebCore::Navigator::userAgentData const):
* Source/WebCore/page/Navigator.idl:
* Source/WebCore/page/NavigatorUAData.h:
* Source/WebCore/page/Quirks.cpp:
(WebCore::isStorageAccessQuirkDomainAndElement):
(WebCore::Quirks::needsNavigatorUserAgentDataQuirk const):
(WebCore::handleTMobileQuirks):
(WebCore::handleGoogleQuirks):
(WebCore::Quirks::determineRelevantQuirks):
* Source/WebCore/page/Quirks.h:
* Source/WebCore/page/QuirksData.h:
* Source/WebCore/page/UserAgentStringParser.cpp:
(WebCore::UserAgentStringParser::populateUserAgentData):

Canonical link: https://commits.webkit.org/298941@main